@@ -111,7 +111,7 @@ class Smarty extends Smarty_Internal_TemplateBase
     /**
      * smarty version
      */
-    const SMARTY_VERSION = '3.1.22-dev/27';
+    const SMARTY_VERSION = '3.1.22-dev/28';
 
     /**
      * define variable scopes
