@@ -603,7 +603,7 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase
                     } else {
                         // file and php types can be checked without loading the respective resource handlers
                         $mtime = is_file($_file_to_check[0]) ? @filemtime($_file_to_check[0]) : false;
-                     }
+                    }
                 } elseif ($_file_to_check[2] == 'string') {
                     continue;
                 } else {
